Fixes splash page spacing

--- a/app/assets/stylesheets/splash.scss
+++ b/app/assets/stylesheets/splash.scss
@@ -39,7 +39,7 @@
   flex-wrap: wrap;
   justify-content: space-around;
   list-style: none;
-  width: 80%;
+  width: 75%;
   margin: 0 auto;
 }
 
